crates/squawk_parser/tests/snapshots/tests__copy_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/copy.sql
---
SOURCE_FILE
  COMMENT "-- simple_copy_from"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "copytest"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_PROGRAM
        LITERAL
          STRING "'/tmp/copy.data'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- copy_from_stdin"
  WHITESPACE "\n"
  COPY
    COPY_KW "COPY"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "FROM"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "STDIN"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- copy_from_stdin_with_options"
  WHITESPACE "\n"
  COPY
    COPY_KW "COPY"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
      WHITESPACE " "
      COLUMN_REF_LIST
        L_PAREN "("
        COLUMN_NAME_REF
          IDENT "id"
        COMMA ","
        WHITESPACE " "
        COLUMN_NAME_REF
          NAME_KW "name"
        R_PAREN ")"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "FROM"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "STDIN"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      COPY_OPTION
        COPY_OPTION_KEY
          FORMAT_KW "FORMAT"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            CSV_KW "csv"
      COMMA ","
      WHITESPACE " "
      COPY_OPTION
        COPY_OPTION_KEY
          HEADER_KW "HEADER"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- copy_to"
  WHITESPACE "\n"
  COPY
    COPY_KW "COPY"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_TO
      TO_KW "TO"
      WHITESPACE " "
      COPY_STDOUT
        STDOUT_KW "STDOUT"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      COPY_OPTION
        COPY_OPTION_KEY
          DELIMITER_KW "DELIMITER"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "'|'"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- copy_from"
  WHITESPACE "\n"
  COPY
    COPY_KW "COPY"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "FROM"
      WHITESPACE " "
      COPY_PROGRAM
        LITERAL
          STRING "'/usr1/proj/bray/sql/country_data'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- copy_to_file"
  WHITESPACE "\n"
  COPY
    COPY_KW "COPY"
    WHITESPACE " "
    COPY_QUERY
      L_PAREN "("
      SELECT
        SELECT_CLAUSE
          SELECT_KW "SELECT"
          WHITESPACE " "
          TARGET_LIST
            TARGET
              STAR "*"
        WHITESPACE " "
        FROM_CLAUSE
          FROM_KW "FROM"
          WHITESPACE " "
          RELATION_FROM_ITEM
            RELATION_NAME_REF
              PATH_REF
                PATH_SEGMENT_REF
                  IDENT "country"
        WHITESPACE " "
        WHERE_CLAUSE
          WHERE_KW "WHERE"
          WHITESPACE " "
          BIN_EXPR
            NAME_REF
              IDENT "country_name"
            WHITESPACE " "
            LIKE_KW "LIKE"
            WHITESPACE " "
            LITERAL
              STRING "'A%'"
      R_PAREN ")"
    WHITESPACE " "
    COPY_TO
      TO_KW "TO"
      WHITESPACE " "
      COPY_PROGRAM
        LITERAL
          STRING "'/usr1/proj/bray/sql/a_list_countries.copy'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- copy_to_compress_filed"
  WHITESPACE "\n"
  COPY
    COPY_KW "COPY"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_TO
      TO_KW "TO"
      WHITESPACE " "
      COPY_PROGRAM
        PROGRAM_KW "PROGRAM"
        WHITESPACE " "
        LITERAL
          STRING "'gzip > /usr1/proj/bray/sql/country_data.gz'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- log_setting"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "x"
      WHITESPACE " "
      COLUMN_REF_LIST
        L_PAREN "("
        COLUMN_NAME_REF
          IDENT "i"
        COMMA ","
        WHITESPACE " "
        COLUMN_NAME_REF
          IDENT "y"
        R_PAREN ")"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_PROGRAM
        LITERAL
          STRING "'/tmp/input.file'"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      WHITESPACE " "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "on_error"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            IGNORE_KW "ignore"
      COMMA ","
      WHITESPACE " "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "log_verbosity"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            VERBOSE_KW "verbose"
      WHITESPACE " "
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- on_error"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "copytest"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_PROGRAM
        LITERAL
          STRING "'/tmp/copy.data'"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      WHITESPACE " "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "on_error"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            IGNORE_KW "ignore"
      WHITESPACE " "
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- all_the_options"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_PROGRAM
        LITERAL
          STRING "'foo'"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          FORMAT_KW "format"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            CSV_KW "csv"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          FREEZE_KW "freeze"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          FREEZE_KW "freeze"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          FREEZE_KW "freeze"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          DELIMITER_KW "delimiter"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "','"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          NULL_KW "null"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "'\\n'"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          DEFAULT_KW "default"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "'foo'"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          HEADER_KW "header"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          HEADER_KW "header"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          HEADER_KW "header"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          HEADER_KW "header"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            MATCH_KW "match"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          QUOTE_KW "quote"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "'foo'"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          ESCAPE_KW "escape"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "'bar'"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "force_quote"
        WHITESPACE " "
        COPY_OPTION_VALUE
          STAR "*"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "force_quote"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_ARG_LIST
            L_PAREN "("
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "a"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "b"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "c"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "d"
            R_PAREN ")"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "force_not_null"
        WHITESPACE " "
        COPY_OPTION_VALUE
          STAR "*"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "force_not_null"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_ARG_LIST
            L_PAREN "("
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "a"
            R_PAREN ")"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "force_null"
        WHITESPACE " "
        COPY_OPTION_VALUE
          STAR "*"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "force_null"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_ARG_LIST
            L_PAREN "("
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "a"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                IDENT "b"
            R_PAREN ")"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "on_error"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            IDENT "stop"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "on_error"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            IGNORE_KW "ignore"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          ENCODING_KW "encoding"
        WHITESPACE " "
        COPY_OPTION_VALUE
          LITERAL
            STRING "'utf8'"
      COMMA ","
      WHITESPACE "\n  "
      COPY_OPTION
        COPY_OPTION_KEY
          IDENT "log_verbosity"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_VALUE_NAME
            VERBOSE_KW "verbose"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- legacy_force_quote"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_TO
      TO_KW "to"
      WHITESPACE " "
      COPY_STDOUT
        STDOUT_KW "stdout"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      CSV_KW "csv"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      FORCE_KW "force"
      WHITESPACE " "
      FORCE_QUOTE
        QUOTE_KW "quote"
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "a"
      COMMA ","
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "b"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- legacy_force_quote_star"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_TO
      TO_KW "to"
      WHITESPACE " "
      COPY_STDOUT
        STDOUT_KW "stdout"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      CSV_KW "csv"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      FORCE_KW "force"
      WHITESPACE " "
      FORCE_QUOTE
        QUOTE_KW "quote"
      WHITESPACE " "
      STAR "*"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- legacy_force_not_null"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "stdin"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      CSV_KW "csv"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      FORCE_KW "force"
      WHITESPACE " "
      FORCE_NOT_NULL
        NOT_KW "not"
        WHITESPACE " "
        NULL_KW "null"
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "a"
      COMMA ","
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "b"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- legacy_force_not_null_star"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "stdin"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      CSV_KW "csv"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      FORCE_KW "force"
      WHITESPACE " "
      FORCE_NOT_NULL
        NOT_KW "not"
        WHITESPACE " "
        NULL_KW "null"
      WHITESPACE " "
      STAR "*"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- legacy_options"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "country"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "stdin"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      BINARY_KW "binary"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      DELIMITER_KW "delimiter"
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      LITERAL
        STRING "'|'"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      NULL_KW "null"
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      LITERAL
        STRING "'\\n'"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      QUOTE_KW "quote"
      WHITESPACE " "
      LITERAL
        STRING "'\"'"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      ESCAPE_KW "escape"
      WHITESPACE " "
      LITERAL
        STRING "'\\'"
    WHITESPACE " "
    COPY_LEGACY_OPTION
      ENCODING_KW "encoding"
      WHITESPACE " "
      LITERAL
        STRING "'utf8'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- parenthesized option arguments"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "stdin"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      COPY_OPTION
        COPY_OPTION_KEY
          DEFAULT_KW "default"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_ARG_LIST
            L_PAREN "("
            COPY_OPTION_ARG
              LITERAL
                STRING "'x'"
            R_PAREN ")"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
  COPY
    COPY_KW "copy"
    WHITESPACE " "
    COPY_TABLE
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    COPY_FROM
      FROM_KW "from"
      WHITESPACE " "
      COPY_STDIN
        STDIN_KW "stdin"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    COPY_OPTION_LIST
      L_PAREN "("
      COPY_OPTION
        COPY_OPTION_KEY
          FORMAT_KW "format"
        WHITESPACE " "
        COPY_OPTION_VALUE
          COPY_OPTION_ARG_LIST
            L_PAREN "("
            COPY_OPTION_ARG
              LITERAL
                STRING "'csv'"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              COPY_OPTION_VALUE_NAME
                OFF_KW "off"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              ON_KW "on"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              LITERAL
                TRUE_KW "true"
            COMMA ","
            WHITESPACE " "
            COPY_OPTION_ARG
              LITERAL
                FALSE_KW "false"
            R_PAREN ")"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
