crates/squawk_parser/tests/snapshots/tests__create_access_method_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_access_method.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_ACCESS_METHOD
    CREATE_KW "create"
    WHITESPACE " "
    ACCESS_KW "access"
    WHITESPACE " "
    METHOD_KW "method"
    WHITESPACE " "
    ACCESS_METHOD
      IDENT "m"
    WHITESPACE "\n  "
    TYPE_KW "type"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE "\n  "
    HANDLER_CLAUSE
      HANDLER_KW "handler"
      WHITESPACE " "
      FUNCTION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_ACCESS_METHOD
    CREATE_KW "create"
    WHITESPACE " "
    ACCESS_KW "access"
    WHITESPACE " "
    METHOD_KW "method"
    WHITESPACE " "
    ACCESS_METHOD
      IDENT "m"
    WHITESPACE "\n  "
    TYPE_KW "type"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE "\n  "
    HANDLER_CLAUSE
      HANDLER_KW "handler"
      WHITESPACE " "
      FUNCTION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "bar"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "f"
    SEMICOLON ";"
  WHITESPACE "\n\n"
