crates/squawk_parser/tests/snapshots/tests__create_collation_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_collation.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_COLLATION
    CREATE_KW "create"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION
      PATH
        PATH_SEGMENT
          IDENT "c"
    WHITESPACE " "
    COLLATION_FROM
      FROM_KW "from"
      WHITESPACE " "
      COLLATION_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- from_full"
  WHITESPACE "\n"
  CREATE_COLLATION
    CREATE_KW "create"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    COLLATION
      PATH
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT
          IDENT "c"
    WHITESPACE " "
    COLLATION_FROM
      FROM_KW "from"
      WHITESPACE " "
      COLLATION_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "bar"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_options"
  WHITESPACE "\n"
  CREATE_COLLATION
    CREATE_KW "create"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    COLLATION
      PATH
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT
          IDENT "c"
    WHITESPACE " "
    ATTRIBUTE_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "locale"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            STRING "'foo'"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "lc_collate"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            INT_NUMBER "1"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "lc_ctype"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "provider"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            STRING "'foo'"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "deterministic"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "rules"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "r"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          VERSION_KW "version"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            STRING "'100'"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
