crates/squawk_parser/tests/snapshots/tests__create_conversion_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_conversion.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_CONVERSION
    CREATE_KW "create"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION
      PATH
        PATH_SEGMENT
          IDENT "c"
    WHITESPACE " \n  "
    FOR_KW "for"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE " \n  "
    FROM_KW "from"
    WHITESPACE " "
    FUNCTION_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "f"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_CONVERSION
    CREATE_KW "create"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION
      PATH
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "bar"
        DOT "."
        PATH_SEGMENT
          IDENT "c"
    WHITESPACE " \n  "
    FOR_KW "for"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE " \n  "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE " \n  "
    FROM_KW "from"
    WHITESPACE " "
    FUNCTION_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "bar"
    SEMICOLON ";"
  WHITESPACE "\n\n"
