crates/squawk_parser/tests/snapshots/tests__create_ext_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_ext.sql
---
SOURCE_FILE
  COMMENT "-- create_extension"
  WHITESPACE "\n"
  CREATE_EXTENSION
    CREATE_KW "create"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    EXTENSION
      IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n"
  CREATE_EXTENSION
    CREATE_KW "create"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    IF_NOT_EXISTS
      IF_KW "if"
      WHITESPACE " "
      NOT_KW "not"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    EXTENSION
      IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_EXTENSION
    CREATE_KW "create"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    EXTENSION
      IDENT "hstore"
    WHITESPACE " "
    EXTENSION_SCHEMA
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "addons"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_EXTENSION
    CREATE_KW "create"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    EXTENSION
      IDENT "foo"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    EXTENSION_SCHEMA
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "bar"
    WHITESPACE "\n  "
    EXTENSION_VERSION
      VERSION_KW "version"
      WHITESPACE " "
      IDENT "foo"
    WHITESPACE "\n  "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_EXTENSION
    CREATE_KW "create"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    EXTENSION
      IDENT "foo"
    WHITESPACE "\n  "
    EXTENSION_SCHEMA
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "bar"
    WHITESPACE "\n  "
    EXTENSION_VERSION
      VERSION_KW "version"
      WHITESPACE " "
      LITERAL
        STRING "'buzz'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
