crates/squawk_parser/tests/snapshots/tests__create_foreign_data_wrapper_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_foreign_data_wrapper.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_FOREIGN_DATA_WRAPPER
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    DATA_KW "data"
    WHITESPACE " "
    WRAPPER_KW "wrapper"
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER
      IDENT "w"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_FOREIGN_DATA_WRAPPER
    CREATE_KW "create"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    DATA_KW "data"
    WHITESPACE " "
    WRAPPER_KW "wrapper"
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER
      IDENT "w"
    WHITESPACE "\n  "
    FDW_OPTION_LIST
      OPTION_CONNECTION
        CONNECTION_KW "connection"
        WHITESPACE " "
        FUNCTION_NAME_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "c"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "bar"
      WHITESPACE "\n  "
      OPTION_NO_CONNECTION
        NO_KW "no"
        WHITESPACE " "
        CONNECTION_KW "connection"
      WHITESPACE "\n  "
      OPTION_HANDLER
        HANDLER_KW "handler"
        WHITESPACE " "
        FUNCTION_NAME_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "foo"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "bar"
      WHITESPACE "\n  "
      OPTION_NO_HANDLER
        NO_KW "no"
        WHITESPACE " "
        HANDLER_KW "handler"
      WHITESPACE "\n  "
      OPTION_VALIDATOR
        VALIDATOR_KW "validator"
        WHITESPACE " "
        FUNCTION_NAME_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "f"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "bar"
      WHITESPACE "\n  "
      OPTION_NO_VALIDATOR
        NO_KW "no"
        WHITESPACE " "
        VALIDATOR_KW "validator"
      WHITESPACE "\n  "
      OPTION_ALTER_OPTION_LIST
        OPTIONS_KW "options"
        WHITESPACE " "
        L_PAREN "("
        ALTER_OPTION
          FOREIGN_OPTION_NAME
            IDENT "a"
          WHITESPACE " "
          LITERAL
            STRING "'foo'"
        COMMA ","
        WHITESPACE " "
        ALTER_OPTION
          FOREIGN_OPTION_NAME
            IDENT "b"
          WHITESPACE " "
          LITERAL
            STRING "'bar'"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
